--- a/api/package.json
+++ b/api/package.json
@@ -4,16 +4,16 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
-      "cors": "^2.8.5",
-      "express": "^4.18.2",
-      "mongodb": "^4.1.0",
-      "multer": "^1.4.5-lts.1"
+        "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "mongodb": "^4.1.0",
+        "multer": "^1.4.5-lts.1"
     }
-  }
-  
+}
